* HttpHelper переведен на java.util.Base64 (вместо sun.misc.BASE64Encoder) * В Core добавлен finalizeConfiguration() - загрузка system properties * Работа над QueryEngine+QueryExecutor